Data types/String data type/ex1
>>> s="gorakh
  File "<stdin>", line 1
    s="gorakh
           ^
SyntaxError: EOL while scanning string literal


s[10]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: string index out of range
>>> 
